<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_name"
        android:layout_width="match_parent"
        app:contentInsetStart="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_main" >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/user_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_input_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/hint_input_name"
            android:paddingLeft="20dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_name_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/app_main"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_name_submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/app_main"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>