<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_main">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="26dp"
            android:paddingRight="24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:src="@mipmap/icon" />

            <!--姓名-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:id="@+id/edit_sign_up_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:text="性别"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <RadioGroup
                    android:paddingLeft="20dp"
                    android:id="@+id/rg_user_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_marginLeft="@dimen/dp_10"
                        android:id="@+id/rb_user_sex_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:checked="true"
                        android:text="男" />
                    <RadioButton
                        android:layout_marginLeft="@dimen/dp_10"
                        android:id="@+id/rb_user_sex_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="女" />
                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_user_birth"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/user_birth"
                    android:textSize="18sp"
                    android:paddingRight="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp" />
                <com.joanzapata.iconify.widget.IconTextView
                    android:text="{fa-calendar-o}"
                    android:paddingLeft="30dp"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="暂无选择"
                    android:textSize="18sp"
                    android:textColor="@color/we_chat_black"
                    android:paddingLeft="@dimen/dp_10"
                    android:gravity="center"
                    android:id="@+id/tv_user_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <!--邮箱-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_email"
                    android:id="@+id/edit_sign_up_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--手机号码-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_phone"
                    android:id="@+id/edit_sign_up_phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--密码-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_password"
                    android:id="@+id/edit_sign_up_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--重复密码-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/user_password_once"
                    android:id="@+id/edit_sign_up_re_password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:background="@color/app_main"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_link_sign_in"
                android:layout_width="match_parent"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/sign_up_msg"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>