<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       app:contentInsetStart="0dp"
       android:background="@color/app_main"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <androidx.appcompat.widget.AppCompatTextView
           android:textSize="20sp"
           android:gravity="center"
           android:textColor="@color/white"
           android:text="@string/note_detial_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
   </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/edit_note_input_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/gray_btton"
            android:hint="@string/title"/>
        <LinearLayout
            android:id="@+id/ll_note_detial_time"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/gray_btton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/choose_time"
                android:textSize="15sp"
                android:paddingRight="@dimen/dp_10"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
            <com.joanzapata.iconify.widget.IconTextView
                android:text="{fa-calendar-o}"
                android:paddingLeft="@dimen/dp_10"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="暂无选择"
                android:textSize="15sp"
                android:textColor="@color/we_chat_black"
                android:paddingLeft="@dimen/dp_10"
                android:gravity="center"
                android:id="@+id/tv_note_detial_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/gray_btton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ll_note_detial_attraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/choose_attractions"
                    android:textSize="15sp"
                    android:paddingRight="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp" />
                <com.joanzapata.iconify.widget.IconTextView
                    android:text="{fa-location-arrow}"
                    android:paddingLeft="5dp"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="暂无选择"
                    android:textSize="15sp"
                    android:textColor="@color/we_chat_black"
                    android:paddingLeft="@dimen/dp_10"
                    android:gravity="center"
                    android:id="@+id/tv_note_detial_attraction"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:paddingTop="@dimen/dp_10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioGroup
                    android:paddingLeft="10dp"
                    android:id="@+id/rg_note_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">
                <RadioButton
                    android:layout_marginLeft="@dimen/dp_10"
                    android:id="@+id/rb_note_attraction_want_to_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="想去玩" />
                <RadioButton
                    android:layout_marginLeft="@dimen/dp_10"
                    android:id="@+id/rb_note_attraction_played"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="已去过" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:id="@+id/edit_note_input_content"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/gray_btton"
            android:gravity="left|top"
            android:hint="内容"
            android:inputType="textMultiLine" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">
            <Button
                android:id="@+id/btn_note_travel_canel"
                android:text="取消"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/white"
                android:background="@drawable/normal_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp" />
            <Button
                android:id="@+id/btn_note_travel_save"
                android:text="保存"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="35dp"
                android:textColor="@color/white"
                android:background="@drawable/normal_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>