<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/app_main">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="床前明月光"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@mipmap/touxiang" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/travel_note"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_all_note"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_all_note"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/tv_all_account_arrow"
                android:gravity="center"
                android:text="@string/all_note"
                android:textColor="@android:color/darker_gray" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/tv_all_account_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="{fa-chevron-right}"
                android:textColor="@android:color/darker_gray" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_like_to_play_note"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/like_to_play"
                    android:textSize="10sp" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="{fa-credit-card}"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_played_note"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/played"
                    android:textSize="10sp" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="{fa-truck}"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

<!--            <androidx.appcompat.widget.LinearLayoutCompat-->
<!--                android:id="@+id/ll_evaluate"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:orientation="vertical">-->

<!--                <androidx.appcompat.widget.AppCompatTextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:gravity="center"-->
<!--                    android:text="待评价"-->
<!--                    android:textSize="10sp" />-->

<!--                <com.joanzapata.iconify.widget.IconTextView-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:gravity="center"-->
<!--                    android:text="{fa-clone}"-->
<!--                    android:textSize="20sp" />-->
<!--            </androidx.appcompat.widget.LinearLayoutCompat>-->

        </androidx.appcompat.widget.LinearLayoutCompat>
        <LinearLayout
            android:background="@color/app_backgroud"
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </LinearLayout>
        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_personal_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>